// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List Snapshots All 1`] = `
<ol
  className="sc-AykKD jpnaqQ className"
>
  <li>
    Test
  </li>
  <li>
    Test2
  </li>
</ol>
`;

exports[`List Snapshots No props 1`] = `
<ul
  className="sc-AykKC ckcHvv"
>
  <li>
    Test
  </li>
  <li>
    Test2
  </li>
</ul>
`;

exports[`List Snapshots className 1`] = `
<ul
  className="sc-AykKC ckcHvv className"
>
  <li>
    Test
  </li>
  <li>
    Test2
  </li>
</ul>
`;

exports[`List Snapshots ordered 1`] = `
<ol
  className="sc-AykKD jpnaqQ"
>
  <li>
    Test
  </li>
  <li>
    Test2
  </li>
</ol>
`;
